Fix CommandPrompt overflow

--- a/src/Components/CommandPrompt/CommandPrompt.module.sass
+++ b/src/Components/CommandPrompt/CommandPrompt.module.sass
@@ -41,3 +41,7 @@ $promptMargin: 40px
 
             &:focus
                 outline: none
+
+.commandList
+    overflow-y: auto
+    margin-bottom: 8px
